<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_household_listing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.aku.hassannaqvi.casi_hhlisting.Activities.FamilyListingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTeamNoWithFam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@null"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_22sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/hh08a1"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/hh08a1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/hh08a1a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:checked="true"
                android:text="@string/yes"
                android:visibility="gone" />

            <RadioButton
                android:id="@+id/hh08a1b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/rfsd"
                android:visibility="gone" />

            <RadioButton
                android:id="@+id/hh08a1c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/locked"
                android:visibility="gone" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/deleteHH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:layoutDirection="rtl"
            android:text="@string/delete"
            android:visibility="gone"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/fldGrpSecB01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/hh08" />

            <EditText
                android:id="@+id/hh08"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/txtName"
                android:hint="@string/hh08"
                android:inputType="text"
                android:maxLength="24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/hh09" />

            <EditText
                android:id="@+id/hh09"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hh09"
                android:inputType="number"
                android:maxLength="11" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_weight="20"
                    android:text="@string/hh16" />


                <EditText
                    android:id="@+id/hh16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_weight="50"
                    android:inputType="number"
                    android:maxLength="2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/hh10" />

                <RadioGroup
                    android:id="@+id/hh10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/hh10a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/hh10b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />

                </RadioGroup>

                <EditText
                    android:id="@+id/hh11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_weight="1"
                    android:hint="@string/hh10a"
                    android:inputType="number"
                    android:maxLength="2"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/hh14" />

                <RadioGroup
                    android:id="@+id/hh14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/hh14a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/hh14b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />

                </RadioGroup>

                <EditText
                    android:id="@+id/hh15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_weight="1"
                    android:hint="@string/hh14a"
                    android:inputType="number"
                    android:maxLength="2"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <Switch
                    android:id="@+id/hh17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_weight="4"
                    android:text="@string/hh17"
                    android:textColor="@color/colorPrimaryDark"
                    android:textOff="@string/no"
                    android:textOn="@string/yes"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnAddNewHousehold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Add New Family"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnAddFamily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Add Next Family"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnAddHousehold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Goto Next Structure"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>