<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_household_listing">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_bg_effect"
        android:orientation="vertical">

        <!--DISTRICT (Name)-->
        <androidx.cardview.widget.CardView style="@style/cardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:minWidth="128dp"
                        android:text="@string/hh02" />

                    <EditText
                        android:id="@+id/hh02"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:digits="1234567890"
                        android:inputType="number"
                        android:maxLength="9"
                        android:text=""
                        android:textAlignment="center"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hh03" />

                <TextView
                    android:id="@+id/hh03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/hh03"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_22sdp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!--// Structure Type-->
        <androidx.cardview.widget.CardView style="@style/cardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="8dp"
                    android:text="@string/hh04" />

                <RadioGroup
                    android:id="@+id/hh04"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/hh04a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hh04a" />

                    <RadioButton
                        android:id="@+id/hh04b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hh04b" />

                    <RadioButton
                        android:id="@+id/hh04g"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hh04g" />

                    <RadioButton
                        android:id="@+id/hh04h"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hh04h" />

                    <RadioButton
                        android:id="@+id/hh04i"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hh04i" />

                </RadioGroup>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/na101d"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:minHeight="56dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/fldGrpHH04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.cardview.widget.CardView style="@style/cardView">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <!--Are there more than one Families?-->
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/hh05" />

                        <Switch
                            android:id="@+id/hh05"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="24dp"
                            android:textOff="@string/no"
                            android:textOn="@string/yes" />
                    </LinearLayout>

                    <!--How many Families?-->
                    <EditText
                        android:id="@+id/hh06"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="1234567890"
                        android:hint="@string/hh06"
                        android:inputType="number"
                        android:maxLength="2"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/hh07"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:text="@string/hh07"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:typeface="serif" />

                    <Button
                        android:id="@+id/btnAddChild"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorAccent"
                        android:text="Add Household"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:typeface="sans" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <!--Family Letter-->
        <androidx.cardview.widget.CardView style="@style/cardView">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnAddHousehold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="Goto Next Structure"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:typeface="sans"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btnChangePSU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="Change PSU Number"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:typeface="sans"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
