<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_child"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.aku.hassannaqvi.casi_hhlisting.Activities.AddChildActivity">

    <TextView
        android:id="@+id/txtChildListing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#d6d6d6"
        android:text="Child Listing"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/child_name" />

    <EditText
        android:id="@+id/icName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/child_age" />

        <EditText
            android:id="@+id/icAgeM"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:hint="@string/hh12"
            android:inputType="number"
            android:maxLength="2" />

        <EditText
            android:id="@+id/icAgeD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:hint="@string/hh13"
            android:inputType="number"
            android:maxLength="2" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAddChild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Add A Child"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnAddFamily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="addFamily"
        android:text="Add Next Family"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnAddHousehold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="addHousehold"
        android:text="Goto Next Household"
        android:visibility="gone" />

</LinearLayout>
